--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 
-<script src="../jquery.js" ></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" ></script>
 
 <style>
 
